Fix footer nav alignment to line separator

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -72,6 +72,14 @@
 	
 }
 
+@media only screen and (min-width: 961px) {
+  
+  .footer-navigation .footer-navigation-wrapper > li:first-child > a {
+    padding-left: 0;
+  }
+  
+}
+
 @media only screen and (max-width: 960px) {
   
   .site-footer .site-info {
